--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
         <link rel="stylesheet" href="style.css" />
         <title>Pig Game</title>
     </head>
+    <body>
+        <script src="script.js"></script>
+    </body>
 </html>
