--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <title>Pig Game</title>
     </head>
     <body>
+        <main>
+            <section class="player player--0 player--active">
+                <h2 class="name" id="name--0">Player 1</h2>
+                <h2 class="msg wining-msg--0 hidden">Wins The Game 🏆🏆🏆</h2>
+                <p class="score" id="score--0">0</p>
+                <div class="current">
+                    <p class="current-label">Current</p>
+                    <p class="current-score" id="current--0">0</p>
+                </div>
+            </section>
+        </main>
         <script src="script.js"></script>
     </body>
 </html>
