--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <p class="current-score" id="current--1">0</p>
                 </div>
             </section>
+
+            <img src="dice-5.png" alt="Playing dice" class="dice" />
         </main>
         <script src="script.js"></script>
     </body>
