--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             <button class="btn btn--roll">🎲 Roll dice</button>
             <button class="btn btn--hold">📥 Hold</button>
         </main>
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
